@@ -1,36 +1,16 @@
-/*
- *
- * EndSectors – Non-Commercial License
- * (c) 2025 Endixon
- *
- * Permission is granted to use, copy, and
- * modify this software **only** for personal
- * or educational purposes.
- *
- * Commercial use, redistribution, claiming
- * this work as your own, or copying code
- * without explicit permission is strictly
- * prohibited.
- *
- * Visit https://github.com/Endixon/EndSectors
- * for more info.
- *
- */
-
 package pl.endixon.sectors.paper.inventory;
 
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import pl.endixon.sectors.common.sector.SectorType;
-import pl.endixon.sectors.common.util.ChatUtil;
 import pl.endixon.sectors.paper.inventory.api.WindowUI;
 import pl.endixon.sectors.paper.inventory.api.builder.StackBuilder;
 import pl.endixon.sectors.paper.manager.SectorManager;
 import pl.endixon.sectors.paper.sector.Sector;
 import pl.endixon.sectors.paper.util.HeadFactory;
+import pl.endixon.sectors.paper.util.MessagesUtil;
 
 public class SectorShowWindow {
 
@@ -39,23 +19,26 @@ public class SectorShowWindow {
 
     public SectorShowWindow(Player player, SectorManager manager) {
         this.player = player;
-        this.window = new WindowUI("&7Lista Sektorów", 6);
+        this.window = new WindowUI(MessagesUtil.SHOW_GUI_TITLE.getText(), 6);
 
         List<Sector> sectors = manager.getSectors().stream()
                 .sorted(Comparator
-                .comparingInt((Sector s) -> getOrder(s.getType()))
-                .thenComparing(Sector::getName, String.CASE_INSENSITIVE_ORDER))
+                        .comparingInt((Sector s) -> this.getOrder(s.getType()))
+                        .thenComparing(Sector::getName, String.CASE_INSENSITIVE_ORDER))
+                .limit(54)
                 .toList();
 
-        int slot = 0;
-        for (Sector s : sectors) {
-            if (slot >= 54)
-                break;
-
+        for (int slot = 0; slot < sectors.size(); slot++) {
+            Sector s = sectors.get(slot);
             ItemStack head = HeadFactory.pickOnlineOfflineHead(s.isOnline());
-            ItemStack item = new StackBuilder(head).name("&6" + s.getName()).lores(buildLore(s)).build();
 
-            window.setSlot(slot++, item, null);
+            String itemName = MessagesUtil.SHOW_ITEM_NAME.getText("{SECTOR}", s.getName());
+
+            ItemStack item = new StackBuilder(head)
+                    .name(itemName)
+                    .lores(this.buildLore(s))
+                    .build();
+            window.setSlot(slot, item, null);
         }
     }
 
@@ -70,29 +53,22 @@ public class SectorShowWindow {
     }
 
     private List<String> buildLore(Sector s) {
-        List<String> lore = new ArrayList<>();
-        lore.add("");
-
-        lore.add(ChatUtil.fixHexColors("&#9ca3afStatus: " + (s.isOnline() ? "&#4ade80Online" : "&#ef4444Offline")
-        ));
-
-        lore.add(ChatUtil.fixHexColors("&#9ca3afTPS: " + s.getTPSColored()
-        ));
-
-        lore.add(ChatUtil.fixHexColors("&#9ca3afOnline: &#7dd3fc%d/%d".formatted(s.getPlayerCount(), s.getMaxPlayers())
-        ));
-
-        int percentFull = s.getMaxPlayers() > 0
+        final int percentFull = s.getMaxPlayers() > 0
                 ? (int) ((double) s.getPlayerCount() / s.getMaxPlayers() * 100)
                 : 0;
 
-        lore.add(ChatUtil.fixHexColors("&#9ca3afZapełnienie: &#fbbf24%d%%".formatted(percentFull)
-        ));
+        final String status = s.isOnline()
+                ? MessagesUtil.SHOW_STATUS_ONLINE.getRaw()
+                : MessagesUtil.SHOW_STATUS_OFFLINE.getRaw();
 
-        lore.add(ChatUtil.fixHexColors("&#9ca3afOstatnia aktualizacja: &#a78bfa%.1fs".formatted(s.getLastInfoPacket())
-        ));
-
-        return lore;
+        return MessagesUtil.SHOW_LORE_FORMAT.asLore(
+                "{STATUS}", status,
+                "{TPS}", s.getTPSColored(),
+                "{COUNT}", String.valueOf(s.getPlayerCount()),
+                "{MAX}", String.valueOf(s.getMaxPlayers()),
+                "{PERCENT}", String.valueOf(percentFull),
+                "{UPDATE}", String.format("%.1f", s.getLastInfoPacket())
+        );
     }
 
     public void open() {
